plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

apply from: project.file('test.gradle')
apply from: project.file('publish.gradle')

dependencies {
    implementation("org.bouncycastle:bcpkix-jdk15on:1.69")
    implementation("com.nimbusds:nimbus-jose-jwt:9.15.2")
}